Production/force-app/main/default/objects/Case_Trigger_Setting__c/Case_Trigger_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting for deactivation of case trigger which affect the limit of the fields like: 
Vaxchora Reconstitution,
Vaxchora “2-8C” FAQ,
Vaxchora “2-8” Reminder,
Vivotif Pochette/Pouch.</description>
    <label>Case Trigger setting</label>
</CustomObject>