Production/force-app/main/default/objects/Case_Trigger_Setting__c/fields/Vaxchora_2_8_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Vaxchora_2_8_Reminder__c</fullName>
    <description>Vaxchora “2-8” Reminder</description>
    <inlineHelpText>Vaxchora “2-8” Reminder Cling</inlineHelpText>
    <label>Vaxchora “2-8” Reminder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>