Production/force-app/main/default/objects/Case_Trigger_Setting__c/fields/Vaxchora_2_8C_FAQ__c.field-meta.xml
<CustomField>
    <fullName>Vaxchora_2_8C_FAQ__c</fullName>
    <description>Vaxchora “2-8C” FAQ</description>
    <inlineHelpText>Vaxchora “2-8C” FAQ FlashcardPAX-US-0320</inlineHelpText>
    <label>Vaxchora “2-8C” FAQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>