Production/force-app/main/default/objects/Case_Trigger_Setting__c/fields/Vaxchora_Reconstitution__c.field-meta.xml
<CustomField>
    <fullName>Vaxchora_Reconstitution__c</fullName>
    <description>Vaxchora Reconstitution</description>
    <inlineHelpText>Vaxchora Reconstitution Cling</inlineHelpText>
    <label>Vaxchora Reconstitution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>