Production/force-app/main/default/objects/Case_Trigger_Setting__c/fields/Vivotif_Pochette_Pouch__c.field-meta.xml
<CustomField>
    <fullName>Vivotif_Pochette_Pouch__c</fullName>
    <description>Vivotif Pochette/Pouch</description>
    <inlineHelpText>Vivotif Pochette/Pouch with PI</inlineHelpText>
    <label>Vivotif Pochette/Pouch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>