Production/force-app/main/default/objects/Case_Trigger_Setting__c/fields/Vivotif_Pochette_Pouch_with_PIs_c_Error__c.field-meta.xml
<CustomField>
    <fullName>Vivotif_Pochette_Pouch_with_PIs_c_Error__c</fullName>
    <label>Vivotif_Pochette_Pouch_with_PIs__c Error</label>
    <type>TextArea</type>
</CustomField>